--- a/HomePage.html
+++ b/HomePage.html
@@ -113,7 +113,7 @@
                     <h2>We are living some strange times</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit exercitationem, quas itaque alias quis repudiandae nostrum.</p>
                     <div class="card-tile">
-                        <img class="avatar p10" src="img_avatar.png" alt="Avatar">
+                        <img class="avatar p10" src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar">
                         <div class="p10">
                             <h4>Usama</h4>
                             <p>10/27/2022</p>
@@ -129,7 +129,7 @@
                     <h2>We are living some strange times</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit exercitationem, quas itaque alias quis repudiandae nostrum.</p>
                     <div class="card-tile">
-                        <img class="avatar p10" src="img_avatar.png" alt="Avatar">
+                        <img class="avatar p10" src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar">
                         <div class="p10">
                             <h4>Usama</h4>
                             <p>10/27/2022</p>
@@ -147,7 +147,7 @@
                     <h2>We are living some strange times</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit exercitationem, quas itaque alias quis repudiandae nostrum.</p>
                     <div class="card-tile">
-                        <img class="avatar p10" src="img_avatar.png" alt="Avatar">
+                        <img class="avatar p10" src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar">
                         <div class="p10">
                             <h4>Usama</h4>
                             <p>10/27/2022</p>
@@ -163,7 +163,7 @@
                     <h2>We are living some strange times</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit exercitationem, quas itaque alias quis repudiandae nostrum.</p>
                     <div class="card-tile">
-                        <img class="avatar p10" src="img_avatar.png" alt="Avatar">
+                        <img class="avatar p10" src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar">
                         <div class="p10">
                             <h4>Usama</h4>
                             <p>10/27/2022</p>
@@ -184,7 +184,7 @@
                     <h2>We are living some strange times</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit exercitationem, quas itaque alias quis repudiandae nostrum.</p>
                     <div class="card-tile">
-                        <img class="avatar p10" src="img_avatar.png" alt="Avatar">
+                        <img class="avatar p10" src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar">
                         <div class="p10">
                             <h4>Usama</h4>
                             <p>10/27/2022</p>
@@ -199,7 +199,7 @@
                     <h2>We are living some strange times</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit exercitationem, quas itaque alias quis repudiandae nostrum.</p>
                     <div class="card-tile">
-                        <img class="avatar p10" src="img_avatar.png" alt="Avatar">
+                        <img class="avatar p10" src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar">
                         <div class="p10">
                             <h4>Usama</h4>
                             <p>10/27/2022</p>
@@ -214,7 +214,7 @@
                     <h2>We are living some strange times</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit exercitationem, quas itaque alias quis repudiandae nostrum.</p>
                     <div class="card-tile">
-                        <img class="avatar p10" src="img_avatar.png" alt="Avatar">
+                        <img class="avatar p10" src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar">
                         <div class="p10">
                             <h4>Usama</h4>
                             <p>10/27/2022</p>
@@ -232,7 +232,7 @@
                     <h2>We are living some strange times</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit exercitationem, quas itaque alias quis repudiandae nostrum.</p>
                     <div class="card-tile">
-                        <img class="avatar p10" src="img_avatar.png" alt="Avatar">
+                        <img class="avatar p10" src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar">
                         <div class="p10">
                             <h4>Usama</h4>
                             <p>10/27/2022</p>
@@ -247,7 +247,7 @@
                     <h2>We are living some strange times</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit exercitationem, quas itaque alias quis repudiandae nostrum.</p>
                     <div class="card-tile">
-                        <img class="avatar p10" src="img_avatar.png" alt="Avatar">
+                        <img class="avatar p10" src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar">
                         <div class="p10">
                             <h4>Usama</h4>
                             <p>10/27/2022</p>
@@ -262,7 +262,7 @@
                     <h2>We are living some strange times</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit exercitationem, quas itaque alias quis repudiandae nostrum.</p>
                     <div class="card-tile">
-                        <img class="avatar p10" src="img_avatar.png" alt="Avatar">
+                        <img class="avatar p10" src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar">
                         <div class="p10">
                             <h4>Usama</h4>
                             <p>10/27/2022</p>
